<?xml version="1.0"?>
<package format="2">
  <name>pkg_a</name>
  <version>0.0.0</version>
  <description>The pkg_a package</description>

  <maintainer email="lty@todo.todo">lty</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <export>

  </export>
</package>
